src/c/dynamics.h


#define DYN_RUNGE_KUTTA_23 10
#define DYN_RUNGE_KUTTA_45 11
#define DYN_RUNGE_KUTTA_853 12
#define DYN_ROSENBROCK 13
#define DYN_BDF 14
#define DYN_ADAMS 15
#define DYN_KENNEDY_CARPENTER_4 16
#define DYN_KENNEDY_CARPENTER_5 17
#define DYN_TSITOURAS_5 18
typedef void (*c_vecfcn)(int nvar, int neqn, const double *x, double *f);
typedef void (*c_modal_excite)(int n, double freq, double complex *f);
typedef void (*c_harmonic_ode)(int n, double freq, double t, const double *x,
    double *dxdt);
typedef double (*c_window_function)(int n, int bin);
typedef void (*c_constraint_equations)(int n, int neqn, int nparam, 
    const double *xg, const double *fg, const double *xc, const double *p,
    double *fc);
typedef void (*c_ode_fit)(int n, int nparam, const double *mdl, double t, 
    const double *x, double F, double *dxdt);
typedef void (*c_ss_excitation)(int n, double t, double *u);
typedef struct {
    bool converge_on_chng;
    bool converge_on_fcn;
    bool converge_on_zero_diff;
    int fcn_count;
    int gradient_count;
    int iter_count;
    int jacobian_count;
} c_iteration_behavior;
typedef struct {
    int cycle_count;
    int transient_cycles;
    int points_per_cycle;
    bool frequency_in_hz;
} c_frequency_sweep_controls;
typedef struct {
    double change_in_solution_tolerance;
    double gradient_tolerance;
    double iteration_improvement_tolerance;
    double residual_tolerance;
    int max_function_evaluations;
    int max_iteration_between_updates;
    int max_iteration_count;
} c_iteration_controls;
typedef struct {
    double confidence_interval;
    double probability;
    double standard_error;
    double t_statistic;
} c_regression_statistics;
typedef struct {
    int npts;
    double *input;
    double *output;
    double *t;
} c_dynamic_system_measurement;
typedef struct 
{
    double damping_decrease_factor;
    double damping_increase_factor;
    double finite_difference_step_size;
    int method;
} c_lm_solver_options;
typedef struct
{
    double w;
    double x;
    double y;
    double z;
} c_quaternion;
typedef struct
{
    double a;
    double b;
    double c;
    double d;
} c_plane;
typedef struct
{
    double r0[3];
    double v[3];
} c_line;
typedef struct
{
    double u[3];
    double m[3];
} c_plucker_line;
typedef struct 
{
    double origin[3];
    double i[3];
    double j[3];
    double k[3];
} c_coordinate_system;
typedef struct
{
    double link_length;
    double link_twist;
    double link_offset;
    double joint_angle;
} c_dh_parameter_set;
typedef struct
{
    int count;
    c_dh_parameter_set *parameters;
} c_dh_table;
typedef struct
{
    double link_length;
    double link_twist;
    double link_offset;
    double joint_angle;
    int joint_type;     
    double mass;
    double cg[3];
    double inertia[9];  
} c_binary_link;
typedef struct
{
    int link_count;
    c_binary_link *links;
} c_serial_linkage;
typedef struct
{
    int frame_count;
    double *frames;     
    double mass;
    double cg[3];
    double inertia[9];  
} c_mechanism_link;
typedef struct
{
    int joint_type;     
    int parent_link;    
    int parent_frame;   
    int child_link;     
    int child_frame;    
    bool actuated;
} c_joint;
typedef struct
{
    int order;
    double *coefficients;
} c_polynomial;
typedef struct
{
    c_polynomial numerator;
    c_polynomial denominator;
} c_transfer_function;
typedef struct
{
    int dimension;
    int n_inputs;
    int n_outputs;
    double *A;  
    double *B;  
    double *C;  
    double *D;  
} c_state_space_model;
typedef struct
{
    double density;
    double modulus;
    double poissons_ratio;
} c_material;
typedef struct
{
    int index;
    int dof;
    double x;
    double y;
    double z;
} c_node;
typedef struct
{
    c_material material;
    double area;
    double moment_of_inertia;
    c_node node_1;
    c_node node_2;
} c_beam_element_2d;
typedef struct
{
    c_material material;
    double area;
    double Ixx;
    double Iyy;
    double Izz;
    double Iyz;
    c_node node_1;
    c_node node_2;
    double orientation_point[3];
} c_beam_element_3d;