src/c/dynamics_c_types.f90

! Copyright (c) 2022-2026 Jason Christopherson
! SPDX-License-Identifier: MIT
!
! Permission is hereby granted, free of charge, to any person obtaining a copy
! of this software and associated documentation files (the "Software"), to deal
! in the Software without restriction, including without limitation the rights
! to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
! copies of the Software, and to permit persons to whom the Software is
! furnished to do so, subject to the following conditions:
!
! The Software is provided "as is", without warranty of any kind, express or
! implied, including but not limited to the warranties of merchantability,
! fitness for a particular purpose and noninfringement.
module dynamics_c_types
    use iso_c_binding
    use iso_fortran_env
    use dynamics
    use diffeq
    use spectrum, only : window
    use dynamics_error_handling
    use nonlin
    implicit none

    interface
        subroutine c_vecfcn(nvar, neqn, x, f) bind(C, name = "c_vecfcn")
            use iso_c_binding
            integer(c_int), intent(in), value :: nvar
            integer(c_int), intent(in), value :: neqn
            real(c_double), intent(in) :: x(nvar)
            real(c_double), intent(out) :: f(neqn)
        end subroutine

        subroutine c_modal_excite(n, freq, f) bind(C, name = "c_modal_excite")
            use iso_c_binding
            integer(c_int), intent(in), value :: n
            real(c_double), intent(in), value :: freq
            complex(c_double), intent(out) :: f(n)
        end subroutine

        subroutine c_harmonic_ode(n, freq, t, x, dxdt) &
            bind(C, name = "c_harmonic_ode")
            use iso_c_binding
            integer(c_int), intent(in), value :: n
            real(c_double), intent(in), value :: freq
            real(c_double), intent(in), value :: t
            real(c_double), intent(in) :: x(n)
            real(c_double), intent(out) :: dxdt(n)
        end subroutine

        pure function c_window_function(n, bin) result(rst) &
            bind(C, name = "c_window_function")
            use iso_c_binding
            integer(c_int), intent(in), value :: n
            integer(c_int), intent(in), value :: bin
            real(c_double) :: rst
        end function

        subroutine c_constraint_equations(n, neqn, nparam, xg, fg, xc, p, &
            fc) bind(C, name = "c_constraint_equations")
            use iso_c_binding
            integer(c_int), intent(in), value :: n
            integer(c_int), intent(in), value :: neqn
            integer(c_int), intent(in), value :: nparam
            real(c_double), intent(in) :: xg(n)
            real(c_double), intent(in) :: fg(n)
            real(c_double), intent(in) :: xc(neqn)
            real(c_double), intent(in) :: p(nparam)
            real(c_double), intent(out) :: fc(neqn)
        end subroutine

        subroutine c_ode_fit(neqn, nparam, mdl, t, x, F, dxdt) &
            bind(C, name = "c_ode_fit")
            use iso_c_binding
            integer(c_int), intent(in), value :: neqn
            integer(c_int), intent(in), value :: nparam
            real(c_double), intent(in) :: mdl(nparam)
            real(c_double), intent(in), value :: t
            real(c_double), intent(in) :: x(neqn)
            real(c_double), intent(in), value :: F
            real(c_double), intent(out) :: dxdt(neqn)
        end subroutine

        subroutine c_ss_excitation(n, t, u) bind(C, name = "c_ss_excitation")
            use iso_c_binding
            integer(c_int), intent(in), value :: n
            real(c_double), intent(in), value :: t
            real(c_double), intent(out) :: u(n)
        end subroutine

    end interface

    type c_vecfcn_container
        procedure(c_vecfcn), pointer, nopass :: fcn
    end type

    type c_modal_excite_container
        procedure(c_modal_excite), pointer, nopass :: fcn
    end type

    type c_harmonic_ode_container
        procedure(c_harmonic_ode), pointer, nopass :: fcn
    end type

    type c_siso_fit_container
        procedure(c_ode_fit), pointer, nopass :: odefcn
        procedure(c_constraint_equations), pointer, nopass :: constraints
    end type

    type c_ss_excitation_container
        procedure(c_ss_excitation), pointer, nopass :: fcn
    end type

    type, bind(C) :: c_iteration_behavior
        logical(c_bool) :: converge_on_chng
        logical(c_bool) :: converge_on_fcn
        logical(c_bool) :: converge_on_zero_diff
        integer(c_int) :: fcn_count
        integer(c_int) :: gradient_count
        integer(c_int) :: iter_count
        integer(c_int) :: jacobian_count
    end type

    type, bind(C) :: c_frequency_sweep_controls
        integer(c_int) :: cycle_count
        integer(c_int) :: transient_cycles
        integer(c_int) :: points_per_cycle
        logical(c_bool) :: frequency_in_hz
    end type

    type, bind(C) :: c_iteration_controls
        real(c_double) :: change_in_solution_tolerance
        real(c_double) :: gradient_tolerance
        real(c_double) :: iteration_improvement_tolerance
        real(c_double) :: residual_tolerance
        integer(c_int) :: max_function_evaluations
        integer(c_int) :: max_iteration_between_updates
        integer(c_int) :: max_iteration_count
    end type

    type, bind(C) :: c_regression_statistics
        real(c_double) :: confidence_interval
        real(c_double) :: probability
        real(c_double) :: standard_error
        real(c_double) :: t_statistic
    end type
    
    type, bind(C) :: c_lm_solver_options
        real(c_double) :: damping_decrease_factor
        real(c_double) :: damping_increase_factor
        real(c_double) :: finite_difference_step_size
        integer(c_int) :: method
    end type

    type, extends(window) :: c_window
        procedure(c_window_function), pointer, nopass :: fcn
    contains
        procedure, public :: evaluate => cw_eval
    end type

    type, bind(C) :: c_dynamic_system_measurement
        integer(c_int) :: npts
        type(c_ptr) :: input
        type(c_ptr) :: output
        type(c_ptr) :: t
    end type

    integer(c_int), parameter :: DYN_RUNGE_KUTTA_23 = 10
    integer(c_int), parameter :: DYN_RUNGE_KUTTA_45 = 11
    integer(c_int), parameter :: DYN_RUNGE_KUTTA_853 = 12
    integer(c_int), parameter :: DYN_ROSENBROCK = 13
    integer(c_int), parameter :: DYN_BDF = 14
    integer(c_int), parameter :: DYN_ADAMS = 15
    integer(c_int), parameter :: DYN_KENNEDY_CARPENTER_4 = 16
    integer(c_int), parameter :: DYN_KENNEDY_CARPENTER_5 = 17
    integer(c_int), parameter :: DYN_TSITOURAS_5 = 18

    type, bind(C) :: c_quaternion
        real(c_double) :: w
        real(c_double) :: x
        real(c_double) :: y
        real(c_double) :: z
    end type

    type, bind(C) :: c_plane
        real(c_double) :: a
        real(c_double) :: b
        real(c_double) :: c
        real(c_double) :: d
    end type

    type, bind(C) :: c_line
        real(c_double) :: r0(3)
        real(c_double) :: v(3)
    end type

    type, bind(C) :: c_plucker_line
        real(c_double) :: u(3)
        real(c_double) :: m(3)
    end type

    type, bind(C) :: c_coordinate_system
        real(c_double) :: origin(3)
        real(c_double) :: i(3)
        real(c_double) :: j(3)
        real(c_double) :: k(3)
    end type

    type, bind(C) :: c_dh_parameter_set
        real(c_double) :: link_length
        real(c_double) :: link_twist
        real(c_double) :: link_offset
        real(c_double) :: joint_angle
    end type

    type, bind(C) :: c_dh_table
        integer(c_int) :: count
        type(c_ptr) :: parameters   ! pointer to an array of c_dh_parameter_set items
    end type

    type, bind(C) :: c_binary_link
        real(c_double) :: link_length
        real(c_double) :: link_twist
        real(c_double) :: link_offset
        real(c_double) :: joint_angle
        integer(c_int) :: joint_type
        real(c_double) :: mass
        real(c_double) :: cg(3)
        real(c_double) :: inertia(9)
    end type

    type, bind(C) :: c_serial_linkage
        integer(c_int) :: link_count
        type(c_ptr) :: links    ! pointer to an array of c_binary_link items
    end type

    type, bind(C) :: c_mechanism_link
        integer(c_int) :: frame_count
        type(c_ptr) :: frames   ! pointer to a 4-by-4-by-frame_count array
        real(c_double) :: mass
        real(c_double) :: cg(3)
        real(c_double) :: inertia(9)
    end type

    type, bind(C) :: c_joint
        integer(c_int) :: joint_type
        integer(c_int) :: parent_link
        integer(c_int) :: parent_frame
        integer(c_int) :: child_link
        integer(c_int) :: child_frame
        logical(c_bool) :: actuated
    end type

    type :: c_mechanism_container
        ! The object referenced by an opaque mechanism handle.
        class(kinematic_mechanism), allocatable :: item
    end type

    type, bind(C) :: c_polynomial
        integer(c_int) :: order
        type(c_ptr) :: coefficients ! ascending order
    end type

    type, bind(C) :: c_transfer_function
        type(c_polynomial) :: numerator
        type(c_polynomial) :: denominator
    end type

    type, bind(C) :: c_state_space_model
        integer(c_int) :: dimension
        integer(c_int) :: n_inputs
        integer(c_int) :: n_outputs
        type(c_ptr) :: A    ! dimension -by- dimension
        type(c_ptr) :: B    ! dimension -by- n_inputs
        type(c_ptr) :: C    ! n_outputs -by- dimension
        type(c_ptr) :: D    ! n_outputs -by- n_inputs
    end type

    type, bind(C) :: c_material
        real(c_double) :: density
        real(c_double) :: modulus
        real(c_double) :: poissons_ratio
    end type

    type, bind(C) :: c_node
        integer(c_int) :: index
        integer(c_int) :: dof
        real(c_double) :: x
        real(c_double) :: y
        real(c_double) :: z
    end type

    type, bind(C) :: c_beam_element_2d
        type(c_material) :: material
        real(c_double) :: area
        real(c_double) :: moment_of_inertia
        type(c_node) :: node_1
        type(c_node) :: node_2
    end type

    type, bind(C) :: c_beam_element_3d
        type(c_material) :: material
        real(c_double) :: area
        real(c_double) :: Ixx
        real(c_double) :: Iyy
        real(c_double) :: Izz
        real(c_double) :: Iyz
        type(c_node) :: node_1
        type(c_node) :: node_2
        real(c_double) :: orientation_point(3)
    end type

    interface assignment(=)
        module procedure :: convert_to_c_iteration_behavior
        module procedure :: convert_from_c_iteration_behavior
        module procedure :: convert_to_c_quaternion
        module procedure :: convert_from_c_quaternion
        module procedure :: convert_to_c_line
        module procedure :: convert_from_c_line
        module procedure :: convert_to_c_plane
        module procedure :: convert_from_c_plane
        module procedure :: convert_to_c_plucker_line
        module procedure :: convert_from_c_plucker_line
        module procedure :: convert_to_c_coordinate_system
        module procedure :: convert_from_c_coordinate_system
        module procedure :: convert_to_c_dh_parameter_set
        module procedure :: convert_from_c_dh_parameter_set
        module procedure :: convert_from_c_dh_table
        module procedure :: convert_to_c_binary_link
        module procedure :: convert_from_c_binary_link
        module procedure :: convert_from_c_serial_linkage
        module procedure :: convert_to_c_polynomial
        module procedure :: convert_from_c_polynomial
        module procedure :: convert_to_c_transfer_function
        module procedure :: convert_from_c_transfer_function
        module procedure :: convert_to_c_state_space
        module procedure :: convert_from_c_state_space
    end interface
